Small changes on names

--- a/sing-web/index.html
+++ b/sing-web/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sing Web Read Mapping Tool</title>
+    <title>SingB: Browser-based Read Mapping Tool</title>
     <style>
         :root {
             --primary: #2563eb;
