--- a/sing-web/index.html
+++ b/sing-web/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SingB: Browser-based Read Mapping Tool</title>
+    <script src="coi-serviceworker.min.js"></script>
     <style>
         :root {
             --primary: #2563eb;
