--- a/sing-web/index.html
+++ b/sing-web/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SingB: Browser-based Read Mapping Tool</title>
-    <script src="coi-serviceworker.min.js"></script>
     <style>
         :root {
             --primary: #2563eb;
@@ -144,7 +143,7 @@
     </style>
 </head>
 <body>
-    <h1>Sing Web Read Mapping Tool</h1>
+    <h1>SingB: Browser-based Genomic Read Mapping Tool</h1>
     <p class="privacy-notice">Please be aware that, because WebAssembly is used for this process, your data will not be uploaded to an external server. The mapping algorithm will only operate locally.</p>
     <div class="container">
         <div class="form-group">
