--- a/sing-browser/index.html
+++ b/sing-browser/index.html
@@ -305,11 +305,11 @@
                 log(`Sorting: ${sortOutput ? 'Enabled' : 'Disabled'}`);
                 
                 let effectiveFormat = outputFormat;
-                let effectiveChunkSize = 4 * 1024 * 1024; // Default 4MB
+                let effectiveChunkSize = 4 * 1024 * 1024;
 
                 if (outputFormat === 'bam') {
                     const totalSize = readsFile.size + (reads2File ? reads2File.size : 0);
-                    const BAM_LIMIT = 100 * 1024 * 1024; // 100MB heuristic for single-pass
+                    const BAM_LIMIT = 100 * 1024 * 1024;
 
                     if (totalSize < BAM_LIMIT) {
                         effectiveChunkSize = totalSize + 1024;
@@ -347,8 +347,8 @@
                                             <div style="color:#64748b;font-size:0.95rem;">mapped / ${total.toLocaleString()} total reads</div>
                                         </div>
                                         <div style="margin-top:0.5rem;display:flex;gap:1rem;flex-wrap:wrap;">
-                                            <div style="background:#eef2ff;padding:0.45rem 0.75rem;border-radius:6px;font-weight:700;color:#4338ca;">Rate: ${mapRate.toFixed(2)}%</div>
-                                            <div style="background:#ecfdf5;padding:0.45rem 0.75rem;border-radius:6px;font-weight:700;color:#065f46;">Avg Coverage: ${avgCoverage.toFixed(4)}</div>
+                                            <div style="background:#eef2ff;padding:0.45rem 0.75rem;border-radius:6px;font-weight:700;color:#4338ca;">Mapping Ratio: ${mapRate.toFixed(2)}%</div>
+                                            <div style="background:#ecfdf5;padding:0.45rem 0.75rem;border-radius:6px;font-weight:700;color:#065f46;">Mean Coverage: ${avgCoverage.toFixed(4)}</div>
                                             ${genomeSize > 0 ? `<div style="background:#fff7ed;padding:0.45rem 0.75rem;border-radius:6px;font-weight:700;color:#92400e;">Genome Size: ${genomeSize.toLocaleString()}</div>` : ''}
                                         </div>
                                  `;
